# denali

./: Cargo.toml  text.txt
src/: main.rs  parser.rs  ui.rs
