[package]
name = "denali"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.27.0"
reqwest = { version="0.12.5", features=["blocking", "json"] }
serde_json = "1.0.120"
tokio = { version="1.38.1", features=["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
